--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Nikita Essine <nikita.essine@helsinki.fi>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+coverage = "^6.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
