--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.8"
 pytest = "^7.2.0"
 coverage = "^6.5.0"
 pylint = "^2.15.7"
+autopep8 = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
