--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 coverage = "^6.5.0"
+robotframework = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
