--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py, src/tests/**, src/ui/**, src/app.py, src/index.py
+omit = src/**/__init__.py, src/tests/**, src/ui/**, src/app.py, src/index.py, src/ReferenceLibrary.py, src/build.py
