Lisätty Pylint-tarkistukset GitHub Actionsiin

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,7 @@ jobs:
         run: pip install poetry
       - name: Install dependencies
         run: poetry install
+      - name: Lint
+        run: poetry run invoke lint
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
