--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,5 @@ jobs:
         run: poetry run invoke lint
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
+      - name: Run Robot tests
+        run: poetry run robot src/tests/
